--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>MasterJay</title>
+  <style>
+    body {
+      background-color: #080404;
+    }
+  </style>
 </head>
 
 <body>
